feat: prepare version 1
add base file logic
save prompt config
error logs
rename goal to prompt and neg to negativePrompt
move fileWriter to base
adjust webpack
introduce seed (pseudo)
better JS validation
add several optional dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -108,9 +108,10 @@ training
 
 #
 /generation-*
-!/generation-000.js
-/custom-*
-!/custom-000.js
+/base-*
+!/base-default.js
+!/base-art.js
+
 
 # IntelliJ
 .idea
