--- a/package.json
+++ b/package.json
@@ -1,56 +1,83 @@
 {
   "name": "fail2",
   "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "generation-000.js",
-  "keywords": [],
-  "author": "",
+  "description": "JavaScript Canvas2D | 100% Prompt Driven Development (GPT) ",
+  "keywords": [
+    "ai",
+    "artificial intelligence",
+    "javascript",
+    "gpt",
+    "gpt-4",
+    "gpt-35-turbo"
+  ],
   "license": "AGPL",
+  "author": {
+    "name": "Tim Pietrusky",
+    "url": "https://github.com/NERDDISCO/"
+  },
+  "contributors": [
+    {
+      "name": "Gregor Adams",
+      "url": "https://github.com/pixelass/"
+    },
+    {
+      "name": "Dominik Hautau",
+      "url": "https://github.com/doemser/"
+    }
+  ],
+  "type": "module",
+  "main": "n.a.",
   "scripts": {
-    "prepare": "husky install",
-    "start": "node generation-000.js",
     "dev": "webpack serve --config ./config/webpack.config.dev.js",
+    "prepare": "husky install",
+    "spj": "npx sort-package-json",
     "toc": "npx markdown-toc README.md -i"
   },
-  "devDependencies": {
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.0"
-  },
-  "dependencies": {
-    "cheerio": "1.0.0-rc.12",
-    "css-loader": "^6.7.3",
-    "dotenv": "16.0.3",
-    "express": "^4.18.2",
-    "globby": "^13.1.3",
-    "html-webpack-plugin": "^5.5.0",
-    "jsdom": "21.1.1",
-    "meow": "11.0.0",
-    "noisejs": "^2.1.0",
-    "open": "9.1.0",
-    "openai": "3.2.1",
-    "ora": "6.3.0",
-    "p5": "^1.4.0",
-    "prettier": "^2.8.7",
-    "style-loader": "^3.3.2",
-    "tone": "^14.7.77",
-    "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2"
-  },
   "lint-staged": {
-    "*.{mjs,js,ts,tsx}": [
-      "prettier --write"
+    "*.js": [
+      "npx prettier --write"
     ],
-    "./*.json": [
-      "prettier --write"
+    "package.json": [
+      "npx sort-package-json",
+      "npx prettier --write"
     ],
     "*.md": [
-      "prettier --write"
+      "npx prettier --write"
     ],
     "README.md": [
       "npx markdown-toc -i"
     ]
+  },
+  "dependencies": {
+    "dotenv": "16.0.3",
+    "globby": "13.1.3",
+    "meow": "11.0.0",
+    "openai": "3.2.1",
+    "ora": "6.3.0",
+    "prettier": "2.8.7"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
+  },
+  "optionalDependencies": {
+    "cannon-es": "0.20.0",
+    "color": "4.2.3",
+    "complex.js": "2.1.1",
+    "dat.gui": "0.7.9",
+    "howler": "2.2.3",
+    "noisejs": "2.1.0",
+    "p2-es": "0.7.3",
+    "p5": "1.6.0",
+    "pixi.js": "6.5.9",
+    "simplex-noise": "3.0.1",
+    "three": "0.133.0",
+    "tone": "14.7.77"
   },
   "engines": {
     "node": ">= 18"
