--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "2.8.7"
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.3",
